# agentbeats-polysec

./: .env.example  .gitignore  .gitmodules  Dockerfile  README.md  docker-compose.yml  pyproject.toml
scenarios/cybergym/: scenario-docker.toml  scenario.toml
src/: __init__.py  green_agent.py  llm.py  purple_agent.py
task_data/arvo/47101/: description.txt  error.txt
